--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
 beautifulsoup4==4.13.4
+gspread==6.2.0
+pandas==2.2.3
+python-dotenv==1.1.0
+selenium==4.31.0
+SQLAlchemy==2.0.40
 certifi==2025.1.31
 charset-normalizer==3.4.1
 coverage==7.8.0
